--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     Powerful tooling Batteries included. We built a simple and straightforward
     CLI tool that makes customization and deployment a breeze, but capable of
     producing even the most complicated sites.
-
+    <div id="root"></div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
